# neurogate

./: .env.example  .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit-weekly.yml  ci.yml  deploy.yml
docs/: api.md  bug-report.md  chains.md  providers-setup.md  tool-calling.md
docs/features/: auto-audit-and-add-models.md
scans/: audit-2026-04-29-verified.json  audit-2026-04-30-verified.json  audit-2026-05-02-llm-verified.json  audit-2026-05-02-verified.json  audit-2026-05-02b-llm-verified.json  audit-2026-05-02c-llm-verified.json  audit_catalog.py  audit_verifier.py  catalog-snapshot.json  paid_models_blocklist.yaml  run_weekly_audit.sh
src/llmgate/: anthropic_compat.py  audit.py  auto_route.py  config.py  deep_search.py  errors.py  health.py  main.py  metrics.py  providers.py  router.py  schemas.py
src/llmgate/static/: dashboard.html
src/neurogate/: audit.py  config.py  deep_search.py  health.py  main.py  metrics.py  providers.py  router.py  schemas.py  stats.py
src/neurogate/static/: dashboard.html
